--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,8 @@
 @import "rails_bootstrap_forms";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "simple_calendar";
+@import "flatpickr/dist/flatpickr.css";
 
 // Your CSS partials
 @import "components/index";
