--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -26,9 +26,9 @@
             <p class="card-text"><strong>Price: </strong> <%= booking.duck.price %>€</p>
             <p><strong> Start date: </strong> <%=booking.start_time.strftime("%-d %b") %></p>
             <p><strong> End date: </strong> <%= booking.end_time.strftime("%-d %b") %></p>
-            <div class="btn btn-primary">
-              <%= link_to "See Booking", booking_path(booking) %>
-            </div>
+              <div class="d-flex flex-column h-100 justify-content-between">
+              <%= link_to "See Booking", booking_path(booking), class: "booking btn btn-primary w-40 align-self-center" %>
+              </div>
           </div>
         </div>
       </div>
