--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "simple_calendar";
-@import "flatpickr/dist/flatpickr.css";
+@import "flatpickr/dist/flatpickr";
 
 // Your CSS partials
 @import "components/index";
