--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,8 +38,11 @@
             <%= image_tag "logo.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", "data-bs-toggle": "dropdown", 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "My Profile", dashboard_path, class: "dropdown-item" %>
-              <%= link_to "Create Duck", new_duck_path, class: "dropdown-item" %>
               <%= link_to "My Bookings", bookings_path, class: "dropdown-item" %>
+              <% if current_user.admin %>
+                <%= link_to "Create Duck", new_duck_path, class: "dropdown-item" if current_user.admin %>
+                <%= link_to "Administration", admin_dashboard_path, class: "dropdown-item" if current_user.admin %>
+              <% end %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
           </li>
