--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -9,9 +9,9 @@
 <br>
   <div class="row justify-content-center">
     <div class="col-md-6 d-flex px-0">
-      <div class="card-product">
-        <%= cl_image_tag @booking.duck.photo.key, height: 300, width: 400, crop: :fill %>
-        <div class="card-product-infos">
+      <div class="card card-body">
+        <div class="card-text">
+          <%= cl_image_tag @booking.duck.photo.key, height: 300, width: 400, crop: :fill %>
           <h2><strong><%= @booking.duck.name %></strong></h2>
           <p><%= @booking.duck.description %></p>
           <p><strong>Price: </strong> <%= @booking.duck.price %>€</p>
