Fixes issue with cloudinary in prod/dev environment and prices in cards

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -14,7 +14,7 @@
           <%= cl_image_tag @booking.duck.photo.key, height: 300, width: 400, crop: :fill %>
           <h2><strong><%= @booking.duck.name %></strong></h2>
           <p><%= @booking.duck.description %></p>
-          <p><strong>Price: </strong> <%= @booking.duck.price %>€</p>
+          <p><strong>Price: </strong> <%= @booking.total_cost %>€</p>
         </div>
       </div>
     </div>
