--- a/app/views/ducks/_show.html.erb
+++ b/app/views/ducks/_show.html.erb
@@ -8,7 +8,7 @@
       <div class="modal-body">
         <%= cl_image_tag duck.photo.key, height: 400, width: 330, crop: :fill %>
         <p class="pt-3"><%= duck.description %></p>
-        <p><strong>Price per day: </strong> <%= duck.price %>€</p>
+        <p><strong>Price per day: </strong> <%= duck.price.to_int %>€</p>
         <!--
         <div class="btn btn-primary">
           <%#= link_to "Book This Duck", new_duck_booking_path(duck) %>
