--- a/app/views/ducks/_show.html.erb
+++ b/app/views/ducks/_show.html.erb
@@ -9,32 +9,6 @@
         <%= cl_image_tag duck.photo.key, height: 400, width: 330, crop: :fill %>
         <p class="pt-3"><%= duck.description %></p>
         <p><strong>Price per day: </strong> <%= duck.price.to_int %>€</p>
-        <!--
-        <div class="btn btn-primary">
-          <%#= link_to "Book This Duck", new_duck_booking_path(duck) %>
-        </div>
-        -->
-        <% if policy(duck).edit? %>
-          <div class="btn btn-primary">
-            <%= link_to "Edit", edit_duck_path(duck) %>
-          </div>
-        <% end %>
-        <% if policy(duck).destroy? %>
-          <div class="btn btn-primary">
-            <%= link_to "Destroy", duck_path(duck), method: :delete, data: { confirm: "Are you sure you wanna destroy #{duck.name}?" } %>
-          </div>
-        <% end %>
-        <!--
-        <h2 class="pt-3">Add a review</h2>
-        <%# if @booking%>
-          <%#= simple_form_for [@booking, @review] do |f| %>
-            <%#= f.input :rating, collection: (1..5).to_a %>
-            <%#= f.input :content %>
-            <%#= f.submit class: 'btn btn-primary' %>
-          <%# end %>
-          <br>
-        <%# end %>
-        -->
         <% duck.reviews.each do |review| %>
           <dl><%= "⭐️" * review.rating  if review.rating %></dl>
           <dl><%= review.content %></dl>
@@ -42,7 +16,7 @@
       </div>
       <div class="modal-footer justify-content-around">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save</button>
+        <!-- <button type="button" class="btn btn-primary">Save</button> -->
       </div>
     </div>
   </div>
