Update Rails to 6.1.6

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,7 @@
 // External libraries
 @import "bootstrap/scss/bootstrap";
 @import "rails_bootstrap_forms";
-@import "font-awesome-sprockets";
+// @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "simple_calendar";
 @import "flatpickr/dist/flatpickr";
