Converted typed to stimulus controller

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <div class="container mt-3">
   <div class="title-value mt-0">
     <div class="col-xs-12 no-padding-left">
-      <div id="typed-strings">
+      <div id="typed-strings" data-controller="typed">
         <h4 class="typed mb-0"></h4>      
       </div>
        <h2 class="p-banner pt-3">Can I be Your Rubber Duck?</h2>
