--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -21,10 +21,10 @@
     </div>
     <div class="col-md-6 d-flex">
       <div id="duck-booking-dates" data-unavailable="<%= @duck.unavailable_dates.to_json %>"></div>
-      <%= simple_form_for [@duck, @booking] do |f| %>
+      <%= simple_form_for [@duck, @booking], data: { controller: 'flatpickr' } do |f| %>
         <p><strong>Pick a date</strong></p>
-        <%= f.input :start_date, as: :string, label: false, required: true, input_html: {class: "range_start d-none"} %>
-        <%= f.input :end_date, as: :string, label: false, required: true, input_html: {class: "range_end d-none"} %>
+        <%= f.input :start_date, as: :string, label: false, required: true, input_html: {data: { flatpickr_target: "startDate" }, class: "range_start d-none"} %>
+        <%= f.input :end_date, as: :string, label: false, required: true, input_html: {data: { flatpickr_target: "endDate" }, class: "range_end d-none"} %>
         <button type="button" id="clear_button" title="clear" data-clear>Clear</button>
         <p><strong>Price per day: </strong><span id="duck-price-per-day"><%= @duck.price.to_int %></span> €</p>
         <p>Book for <span id="total-days">0</span><span id="string-days"> days</span></p>
